<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/FL_SP_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueC"
        android:minHeight="@dimen/CM_MinHeightE">

        <Button
            android:id="@+id/BT_SP_Close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/CM_MarginA"
            android:background="@drawable/ic_close" />

        <Spinner
            android:id="@+id/BT_SP_Source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:layout_marginStart="@dimen/CM_MarginI"
            android:visibility="gone"/>

        <Button
            android:id="@+id/BT_SP_Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:padding="@dimen/CM_MarginA"
            android:background="@color/colorTrans"
            android:text="@string/SP_Header_Next"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/CM_TextSizeNormalA" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/SCV_SP_Main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IMV_SP_SelectedPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@+id/FL_SP_Func"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/CM_Margin5">

                <LinearLayout
                    android:id="@+id/LN_SP_Camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/CM_Margin5"
                    android:paddingStart="@dimen/CM_MarginA"
                    android:paddingEnd="@dimen/CM_MarginA"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center"
                    android:background="@drawable/back_bt_blue"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/ic_camera"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/CM_Margin5"
                        android:text="@string/SP_Foot_Camera"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/CM_TextSizeNormalA" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LN_SP_Multi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/CM_Margin5"
                    android:layout_gravity="center_vertical|end"
                    android:gravity="center"
                    android:background="@drawable/back_bt_blue"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/ic_multi_pic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/CM_Margin5"
                        android:text="@string/SP_Title_Multi"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/CM_TextSizeNormalA" />

                </LinearLayout>

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_SP_Pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>